# elmdb-rs

./: .gitignore  PR.md  rebar.config
native/elmdb_nif/: Cargo.toml
native/elmdb_nif/src/: lib.rs
src/: elmdb.erl  elmdb_serial_bench.erl
test/: elmdb_benchmark.erl  elmdb_test.erl
