[package]
name = "elmdb_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "elmdb_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.37.3", features = ["nif_version_2_16"] }
lmdb = "0.8"
lazy_static = "1.4"
arc-swap = "1"
scc = "3"
ahash = "0.8.12"
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = "0.6"
